...
    <string name="sp_username_hint">my user name</string>
    <string name="sp_password_label">Password:</string>
    <string name="sp_password_hint">my password</string>
    <string name="sp_ask_password_text">always ask for password</string>
    <string name="sp_save_btn">Save</string>
    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>


    <!-- Repository Activity -->
    <string name="r_browser_nothing_to_display">There are no resources in this folder.</string>
    <string name="r_search_nothing_to_display">No results from search.</string>
    <!--Options Menu -->
...
