...
    <string name="r_cm_view_details">View Details</string>
    <string name="r_cm_add_to_favorites">Add to favorites</string>
    <string name="r_cm_remove_from_favorites">Remove from favorites</string>
    <!-- Progress Dialog -->
    <string name="r_pd_running_report_msg">Running report…</string>
    <!-- Error messages -->
    <string name="r_error_server_not_supported">Server version is older than 5.0, which is not supported.</string>


    <!-- Search Activity -->
    <string name="s_title">Search Results</string>
    <string name="s_hint">Search resources</string>
    <!-- Action Bar -->
...
    <string name="error_http_502">502 - Bad Gateway.</string>
    <string name="error_http_503">503 - Service Unavailable.</string>
    <string name="error_http_504">504 - Gateway Timeout.</string>

    <!-- Others -->
    <string name="loading_msg">Loading…</string>
    <string name="error_msg">Error</string>
    <string name="cancelled_msg">Cancelled</string>


</resources>
