...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/serverProfileManager.layout"
    android:orientation="vertical" >

    <!-- Server profiles list -->
    <ListView
        android:id="@android:id/list"
        style="@style/list.view"
    />
</LinearLayout>

